코드 정상동작 (오토웨어 레퍼런스와 같은 output 출력)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(mission_planner
     src/default_planner_core.cpp
     src/arrival_checker_core.cpp
     src/mission_planner_core.cpp
+    src/route_handler_core.cpp
 )
 
 target_include_directories(mission_planner PRIVATE
